@@ -692,8 +692,9 @@ extern List acct_storage_g_get_config(void *db_conn)
 	return (*(g_acct_storage_context->ops.get_config))(db_conn);
 }
 
-extern List acct_storage_g_get_associations(void *db_conn, uint32_t uid,
-					    slurmdb_association_cond_t *assoc_cond)
+extern List acct_storage_g_get_associations(
+	void *db_conn, uint32_t uid,
+	slurmdb_association_cond_t *assoc_cond)
 {
 	if (slurm_acct_storage_init(NULL) < 0)
 		return NULL;
